LLM_on_Kubernetes/one-node/open-webui-ingress.yaml
---
# open-webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  namespace: default
spec:
  selector:
    app: open-webui
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: LoadBalancer
---
